move route web file content to route api file
use controllers
